@@ -71,7 +71,7 @@ my %oodist   = (
 	],
 );
 
-my %prereq  = (
+my %requires  = (
 	'Sys::Syslog'             => '0.27',
 	'Encode'                  => '2.00',
 	'Scalar::Util'            => 0,
@@ -80,14 +80,9 @@ my %prereq  = (
 	'String::Print'           => '0.91',
 );
 
-#use Data::Dumper;
-#warn Dumper \%prereq;
-
 WriteMakefile
 	NAME      => 'Log-Report',
 	VERSION   => $version,
-	PREREQ_PM => \%prereq,
-
 	AUTHOR    => 'Mark Overmeer <markov@cpan.org>',
 	ABSTRACT  => 'report a problem, pluggable handlers and language support',
 	LICENSE   => 'perl_5',
@@ -100,20 +95,26 @@ WriteMakefile
 				url  => "$git.git",
 				web  => $git,
 			},
+			bugtracker => {
+				web  => "$git/issues",
+			},
 			homepage => $homepage,
 			license  => [ 'http//dev.perl.org/licenses/' ],
 		},
 		prereqs => {
+			runtime => {
+				requires => \%requires,
+			},
 			develop => {
 				requires => {
 					'OODoc' => '3.04',
-				}
+				},
 			},
 			test => {
 				requires => {
 					'Test::More' => 1.00,
 					'Test::Pod'  => 1.00,
-				}
+				},
 			},
 		},
 
