@@ -9,6 +9,9 @@ TODO:
 
 version 1.43:
 
+	Improvements:
+	- add bugtracker to meta
+
 version 1.42: Tue  4 Nov 10:24:16 CET 2025
 
 	Changes:
